Fix validator issue with result-element by moving text-align attribute to valikot.css

--- a/valikot.css
+++ b/valikot.css
@@ -115,3 +115,6 @@ a:hover:after {
         width: 85%;
         background: #3a3937;
     }
+#result {
+    text-align: center;
+}
